CMAKE_MINIMUM_REQUIRED (VERSION 3.13.0 FATAL_ERROR)

PROJECT (gateway VERSION 0.1.0 LANGUAGES CXX)

SET (CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

INCLUDE (BuildFlags)


# SET (Boost_USE_STATIC_LIBS ON)
FIND_PACKAGE (Boost COMPONENTS
    log
    log_setup
    program_options
    REQUIRED
)
ADD_COMPILE_DEFINITIONS ("BOOST_BEAST_USE_STD_STRING_VIEW")

#SET (PQXX_USE_STATIC_LIBS ON)
FIND_PACKAGE (PQXX REQUIRED)

#SET (HIREDIS_USE_STATIC_LIBS ON)
FIND_PACKAGE (Hiredis REQUIRED)


ADD_SUBDIRECTORY (3rdparty)
ADD_SUBDIRECTORY (common)
ADD_SUBDIRECTORY (gwback)
ADD_SUBDIRECTORY (gwfront)
