SET (TARGET_NAME gwback)


SET (HEADERS
)

SET (SOURCES
    "src/main.cpp"
)

ADD_EXECUTABLE (${TARGET_NAME}
    ${SOURCES}
)


TARGET_INCLUDE_DIRECTORIES (${TARGET_NAME}
    PUBLIC "src/"
)

TARGET_LINK_LIBRARIES (${TARGET_NAME}
    ${Boost_LOG_LIBRARY}
    ${Boost_LOG_SETUP_LIBRARY}
    ${Boost_PROGRAM_OPTIONS_LIBRARY}
    ${PQXX_LIBRARY}
    tomlplusplus
)


INSTALL (
    TARGETS ${TARGET_NAME}
    RUNTIME DESTINATION "${CMAKE_BINARY_DIR}/.."
)